<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@drawable/background"
    >

    <ImageView
        android:id="@+id/iv_gameLogo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/dice2"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/tv_gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_gameLogo"
        android:layout_marginTop="10sp"
        android:text="@string/game_title"
        android:textSize="30sp"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btn_newGame"
        android:layout_width="190dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_gameTitle"
        android:layout_marginTop="50dp"
        android:text="@string/new_game"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:backgroundTint="@color/green"
        />

    <Button
        android:id="@+id/btn_info"
        android:layout_width="190dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_newGame"
        android:layout_marginTop="10dp"
        android:text="@string/info"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:backgroundTint="@color/light_blue"
        />

    <Button
        android:id="@+id/btn_leaderboard"
        android:layout_width="190dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_info"
        android:layout_marginTop="10dp"
        android:text="@string/leaderboard"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:backgroundTint="@color/light_blue"
        />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="190dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_leaderboard"
        android:layout_marginTop="10dp"
        android:text="@string/exit"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:backgroundTint="@color/red"
        />

</androidx.constraintlayout.widget.ConstraintLayout>