<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.GameActivity"
    android:background="@drawable/background">

    <TableLayout
        android:id="@+id/tl_top_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1,2,3,4,5"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        >

            <TableRow android:id="@+id/tr_columnNames">
            <TextView
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:background="@drawable/texture_blue"
                android:text="@string/yamb"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:padding="10dp"
                />
            <TextView
                android:layout_column="2"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:background="@drawable/texture_blue"
                android:text="@string/arrow_down"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:padding="10dp"
                />
            <TextView
                android:layout_column="3"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:background="@drawable/texture_blue"
                android:text="@string/arrow_up"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:padding="10dp"
                />
            <TextView
                android:layout_column="4"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:background="@drawable/texture_blue"
                android:text="@string/arrow_up_down"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:padding="10dp"
                />
            <TextView
                android:layout_column="5"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:background="@drawable/texture_blue"
                android:text="@string/announcement"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:padding="10dp"
                />
        </TableRow>

    </TableLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_main_table"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:clipToPadding="false"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tl_top_row"
        android:scrollbars="vertical"
        tools:listitem="@layout/rv_item_layout"
        />

    <ImageView
        android:id="@+id/iv_die_one"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_roll"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        app:flow_horizontalAlign="center"
        android:src="@drawable/die_face_1"
        />

    <ImageView
        android:id="@+id/iv_die_two"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintLeft_toRightOf="@id/iv_die_one"
        app:layout_constraintBottom_toTopOf="@+id/btn_roll"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        app:flow_horizontalAlign="center"
        android:src="@drawable/die_face_2"
        />

    <ImageView
        android:id="@+id/iv_die_three"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintLeft_toRightOf="@id/iv_die_two"
        app:layout_constraintBottom_toTopOf="@+id/btn_roll"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        app:flow_horizontalAlign="center"
        android:src="@drawable/die_face_3"
        />

    <ImageView
        android:id="@+id/iv_die_four"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintLeft_toRightOf="@id/iv_die_three"
        app:layout_constraintBottom_toTopOf="@+id/btn_roll"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        app:flow_horizontalAlign="center"
        android:src="@drawable/die_face_4"
        />

    <ImageView
        android:id="@+id/iv_die_five"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintLeft_toRightOf="@id/iv_die_four"
        app:layout_constraintBottom_toTopOf="@+id/btn_roll"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        app:flow_horizontalAlign="center"
        android:src="@drawable/die_face_5"
        />

    <ImageView
        android:id="@+id/iv_die_six"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintLeft_toRightOf="@id/iv_die_five"
        app:layout_constraintBottom_toTopOf="@+id/btn_roll"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        app:flow_horizontalAlign="center"
        android:src="@drawable/die_face_6"
        />

    <Button
        android:id="@+id/btn_roll"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/light_blue"
        android:text="@string/roll"
        android:textSize="20sp"
        android:textAllCaps="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
